LB-290 Add query-packages script to linux-pkg

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,19 @@ jobs:
       - uses: actions/checkout@v1
       - run: sudo ./.github/scripts/install-shfmt.sh
       - run: make shfmtcheck
+  verify-query-packages:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./.github/scripts/verify-query-packages.sh
+  verify-query-packages-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./.github/scripts/verify-query-packages.sh
+  verify-query-packages-jenkins:
+    runs-on: ubuntu-latest
+    container: jenkins/jenkins
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./.github/scripts/verify-query-packages.sh
