DLPX-85639 fix linux-pkg unit tests failing due to dwarf dependency on zfs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,19 @@ on: [push, pull_request]
 
 jobs:
   check-shellcheck:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - run: sudo ./.github/scripts/install-shellcheck.sh
       - run: make shellcheck
   check-shfmt:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - run: sudo ./.github/scripts/install-shfmt.sh
       - run: make shfmtcheck
   verify-query-packages:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - run: ./.github/scripts/verify-query-packages.sh
